--- a/sass/pages/_home.scss
+++ b/sass/pages/_home.scss
@@ -27,10 +27,6 @@
 
 @include media-breakpoint-down(lg) {
 
-  body {
-    padding: 20px;
-  }
-
   .section {
     &-heading {
       font-size: 40px;
@@ -90,6 +86,7 @@
 .hero-img-wrapper {
   width: 500px;
   position: relative;
+  overflow: hidden;
 
   .hero-img {
     width: 330px;
@@ -238,7 +235,7 @@
 #products {
 
   .main-button {
-    margin-top: 50px;
+    margin: 50px 0;
   }
 
   .row {
@@ -251,6 +248,7 @@
       .coffee-card {
         color: $primary-dark;
         margin-top: 40px;
+        background-color: $white;
 
         &-1 {
 
@@ -260,17 +258,17 @@
           height: 250px;
           width: 100%;
           object-fit: cover;
-          margin-bottom: -20px;
+          // margin-bottom: -30px;
           z-index: 1;
         }
 
         &-text-wrapper {
           position: relative;
-
+          width: 85%;
           margin: 0 auto;
           padding: 30px 20px;
           background-color: $white;
-          margin-top: -30px;
+          margin-top: -60px;
           z-index: 10;
 
         }
