--- a/sass/parts/_navigation.scss
+++ b/sass/parts/_navigation.scss
@@ -57,6 +57,7 @@ header {
     border-radius: 0;
     padding: 0;
     outline-color: transparent;
+    text-align: end;
   }
 
   .nav-toggle-btn {
